updated styles, new twig files, styleguide, and compiled css

--- a/html/themes/custom/elsa/components/00-config/mixins/_margin.scss
+++ b/html/themes/custom/elsa/components/00-config/mixins/_margin.scss
@@ -5,6 +5,7 @@ $clear-margin: 0rem;
 $small-margin: 1rem;
 $med-margin: 2rem;
 $lrg-margin: 2.5rem;
+$section-margin: 6.7rem;
 
 //our margin mixins
 
