--- a/html/themes/custom/elsa/templates/block/block--local-tasks-block.html.twig
+++ b/html/themes/custom/elsa/templates/block/block--local-tasks-block.html.twig
@@ -5,8 +5,14 @@
  */
 #}
 
-<nav class="navbar navbar-secondary brand-bg-secondary" role="navigation">
-  <div class="navbar-scrollable">
+{%
+  set classes = [
+    'local-tasks',
+  ]
+%}
+
+<nav {{ attributes.addClass(classes) }} role="navigation">
+  <div>
     {{ content }}
   </div>
 </nav>
