--- a/html/themes/custom/elsa/templates/node/field--node--body.html.twig
+++ b/html/themes/custom/elsa/templates/node/field--node--body.html.twig
@@ -6,6 +6,10 @@
 
 {% else %}
 
+  {% if label %}
+    <h2{{ title_attributes }}>{{ label }}</h2>
+  {% endif %}
+  
   <div class="body-text clearfix">
     {% for item in items %}
       {{ item.content }}
