--- a/html/themes/custom/elsa/templates/views/views-view-unformatted.html.twig
+++ b/html/themes/custom/elsa/templates/views/views-view-unformatted.html.twig
@@ -21,5 +21,8 @@
   <h3>{{ title }}</h3>
 {% endif %}
 {% for row in rows %}
+<div class="view-row-group-wrapper">
   {{ row.content }}
+  </div>
 {% endfor %}
+
