--- a/html/themes/custom/elsa/components/00-config/mixins/_clearfix.scss
+++ b/html/themes/custom/elsa/components/00-config/mixins/_clearfix.scss
@@ -1,10 +1,13 @@
 @mixin clearfix() {
+
   &:before,
   &:after {
-    content: " "; // 1
-    display: table; // 2
+    content: " ";
+    display: table;
   }
+
   &:after {
     clear: both;
   }
+
 }
