--- a/html/themes/custom/elsa/components/00-config/variables/_fonts.scss
+++ b/html/themes/custom/elsa/components/00-config/variables/_fonts.scss
@@ -1,6 +1,6 @@
 //font-variables
 $rembase: 10px !default;//to set up easy rem math;
 $lineheight: 10px !default;//to set up easy rem math;
-$primary-font: 'Source Sans Pro', Helvetica, Arial, sans-serif !default;
+$primary-font: 'Gill Sans', Gill Sans MT, Calibri, sans-serif !default;
 $secondary-font: 'Source Sans Pro', Helvetica, Arial, sans-serif !default;
 $body-font-default: 'Source Sans Pro', Helvetica, Arial, sans-serif !default;
