--- a/html/themes/custom/elsa/components/01-base/regions/_regions.scss
+++ b/html/themes/custom/elsa/components/01-base/regions/_regions.scss
@@ -10,11 +10,13 @@ Use regions to place our blocks. The regions will use a gridCSS formula to deal 
 
 main {
   // we are not using grid at mobile since there are no complicated regions to be defined
+  display: grid;
+  display: -ms-grid;
 
-  @include breakpoint (tablet) {
-    display: grid;
-    display: -ms-grid;
-  }
+  // @include breakpoint (tablet) {
+  //   display: grid;
+  //   display: -ms-grid;
+  // }
   
 }
 
@@ -35,9 +37,18 @@ main {
 
 // define our named region tablet/desktop grid layout
 .grid-layout {
+  align-items: start;
+  grid-template-columns: 1fr;   
+  grid-template-areas:    
+  "header" 
+  "main-content"
+  "auxiliary-sidebar"
+  "sidebar-right-top"    
+  "sidebar-right-bottom" 
+  "bottom-content"
+  "nav";
 
   @include breakpoint (tablet) {
-    // grid-template-rows: auto;
     grid-template-columns: minmax(0px, 650px) minmax(300px, 1fr);   
     grid-template-areas:   
     "nav nav" 
@@ -61,104 +72,116 @@ main {
   // define our grid area namesystem
   // colours toggled for troubleshooting
   .region {
-    
+      // ($col-start, $col-end, $row-start, $row-end)
       &--nav {
         grid-area: nav;
-
         //fallbacks for IE
-        @include grid-child (1, 6, 1, 1);
-        
-        // background-color: lightcoral;
+        @include grid-child (1, 2, 6, 7);
+
+        @include breakpoint (tablet) {
+          @include grid-child (1, 3, 1, 2);
+        }
+
+        @include breakpoint (desktop) {
+          @include grid-child (1, 7, 1, 2);
+        }
+        background-color: lightcoral;
       }
-        
+      // ($col-start, $col-end, $row-start, $row-end)         
       &--header {
         grid-area: header;
-
         //fallbacks for IE
+        @include grid-child (1, 2, 1, 2)
+
         @include breakpoint (tablet) {
-          @include grid-child (1, 2, 2, 2);
+          @include grid-child (1, 3, 2, 3);
         }
 
         @include breakpoint (desktop) {
-          @include grid-child (2, 5, 2, 2);
+          @include grid-child (2, 5, 2, 3);
         }
 
-        // background-color: lightgreen;
+        background-color: lightgreen;
       }
-    
+      // ($col-start, $col-end, $row-start, $row-end)     
       &--auxiliary-sidebar {
         grid-area: auxiliary-sidebar;
-
         //fallbacks for IE
+        @include grid-child (1, 2, 3, 4);
+
         @include breakpoint (tablet) {
-          @include grid-child (2, 2, 3, 3);
+          @include grid-child (2, 3, 3, 4);
         }
 
         @include breakpoint (desktop) {
-          @include grid-child (2, 2, 3, 3);
+          @include grid-child (2, 3, 3, 4);
         }
         
-        // background-color: lightgoldenrodyellow;   
+        background-color: lightgoldenrodyellow;  
       }
-      
+      // ($col-start, $col-end, $row-start, $row-end)      
       &--sidebar-right-top {
         grid-area: sidebar-right-top;
-
         //fallbacks for IE
+        @include grid-child (1, 2, 4, 5);
+
         @include breakpoint (tablet) {
-          @include grid-child (2, 2, 4, 4);
+          @include grid-child (2, 3, 4, 5);
         }
 
         @include breakpoint (desktop) {
-          @include grid-child (4, 4, 3, 3);
+          @include grid-child (4, 5, 3, 4);
         }
 
-        // background-color: lightcyan; 
+        background-color: lightcyan; 
       }
-      
+      // ($col-start, $col-end, $row-start, $row-end) 
       &--sidebar-right-bottom {
-        // grid-area: sidebar-right-bottom;
-
+        grid-area: sidebar-right-bottom;
         //fallbacks for IE
+        @include grid-child (1, 1, 5, 5);
+
         @include breakpoint (tablet) {
-          @include grid-child (2, 2, 5, 5);
+          @include grid-child (2, 2, 5, 6);
         }
 
         @include breakpoint (desktop) {
-          @include grid-child (4, 4, 4, 4);
+          @include grid-child (4, 4, 4, 5);
         }
 
-        // background-color: lightgrey;    
+        background-color: lightgrey;    
       }
-      
+      // ($col-start, $col-end, $row-start, $row-end) 
       &--main-content {
         grid-area: main-content;
-
         //fallbacks for IE
+        @include grid-child (1, 2, 2, 3);
+
         @include breakpoint (tablet) {
-          @include grid-child (1, 1, 3, 6);
+          @include grid-child (1, 2, 3, 6);
         }
 
         @include breakpoint (desktop) {
-          @include grid-child (3, 3, 3, 5);
+          @include grid-child (3, 4, 3, 5);
         }
 
-        // background-color: lightblue; 
+        background-color: lightblue; 
       }
-      
+      // ($col-start, $col-end, $row-start, $row-end)      
       &--bottom-content {
         grid-area: bottom-content;
-
         //fallbacks for IE
+        @include grid-child (1, 2, 6, 7);
+
         @include breakpoint (tablet) {
-          @include grid-child (1, 2, 6, 6);
+          @include grid-child (1, 3, 6, 7);
         }
 
         @include breakpoint (desktop) {
-          @include grid-child (1, 6, 5, 5);
+          @include grid-child (1, 7, 5, 6);
         }
 
-        // background-color: lightseagreen;    
+        background-color: lightseagreen;    
       }
     
     }
