--- a/html/themes/custom/elsa/css/elsa.css
+++ b/html/themes/custom/elsa/css/elsa.css
@@ -360,147 +360,204 @@ Use regions to place our blocks. The regions will use a gridCSS formula to deal 
 
 <span style="font-weight:bold; font-size:22px;">CSS</span>
 */
-@media (min-width: 767px) {
-  main {
-    display: grid;
-    display: -ms-grid; } }
+main {
+  display: grid;
+  display: -ms-grid; }
 
 .main-container {
   padding: 0; }
 
-@media (min-width: 767px) {
-  .grid-layout {
-    -ms-grid-columns: minmax(0px, 650px) minmax(300px, 1fr);
-        grid-template-columns: minmax(0px, 650px) minmax(300px, 1fr);
-    grid-template-areas: "nav nav"  "header header"  "main-content auxiliary-sidebar" "main-content sidebar-right-top"      "main-content sidebar-right-bottom"  "bottom-content bottom-content"; } }
-
-@media (min-width: 1025px) {
-  .grid-layout {
-    -ms-grid-columns: 1fr auto minmax(0px, 650px) minmax(300px, 1fr) 1fr;
-        grid-template-columns: 1fr auto minmax(0px, 650px) minmax(300px, 1fr) 1fr;
-    grid-template-areas: "nav nav nav nav nav"  "... header header header ..."  "... auxiliary-sidebar main-content sidebar-right-top ..."  "... auxiliary-sidebar main-content sidebar-right-bottom ..."  "bottom-content bottom-content bottom-content bottom-content bottom-content"; } }
-
-.grid-layout .region--nav {
-  grid-area: nav;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 5;
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 0;
-  grid-column: 1/6;
-  grid-row: 1/1; }
-
-.grid-layout .region--header {
-  grid-area: header; }
+.grid-layout {
+  -ms-flex-align: start;
+      align-items: start;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  grid-template-areas: "header"  "main-content" "auxiliary-sidebar" "sidebar-right-top"     "sidebar-right-bottom"  "bottom-content" "nav"; }
   @media (min-width: 767px) {
-    .grid-layout .region--header {
-      -ms-grid-column: 1;
-      -ms-grid-column-span: 1;
-      -ms-grid-row: 2;
-      -ms-grid-row-span: 0;
-      grid-column: 1/2;
-      grid-row: 2/2; } }
+    .grid-layout {
+      -ms-grid-columns: minmax(0px, 650px) minmax(300px, 1fr);
+          grid-template-columns: minmax(0px, 650px) minmax(300px, 1fr);
+      grid-template-areas: "nav nav"  "header header"  "main-content auxiliary-sidebar" "main-content sidebar-right-top"      "main-content sidebar-right-bottom"  "bottom-content bottom-content"; } }
   @media (min-width: 1025px) {
-    .grid-layout .region--header {
-      -ms-grid-column: 2;
-      -ms-grid-column-span: 3;
-      -ms-grid-row: 2;
-      -ms-grid-row-span: 0;
-      grid-column: 2/5;
-      grid-row: 2/2; } }
-
-.grid-layout .region--auxiliary-sidebar {
-  grid-area: auxiliary-sidebar; }
-  @media (min-width: 767px) {
-    .grid-layout .region--auxiliary-sidebar {
-      -ms-grid-column: 2;
-      -ms-grid-column-span: 0;
-      -ms-grid-row: 3;
-      -ms-grid-row-span: 0;
-      grid-column: 2/2;
-      grid-row: 3/3; } }
-  @media (min-width: 1025px) {
-    .grid-layout .region--auxiliary-sidebar {
-      -ms-grid-column: 2;
-      -ms-grid-column-span: 0;
-      -ms-grid-row: 3;
-      -ms-grid-row-span: 0;
-      grid-column: 2/2;
-      grid-row: 3/3; } }
-
-.grid-layout .region--sidebar-right-top {
-  grid-area: sidebar-right-top; }
-  @media (min-width: 767px) {
-    .grid-layout .region--sidebar-right-top {
-      -ms-grid-column: 2;
-      -ms-grid-column-span: 0;
-      -ms-grid-row: 4;
-      -ms-grid-row-span: 0;
-      grid-column: 2/2;
-      grid-row: 4/4; } }
-  @media (min-width: 1025px) {
-    .grid-layout .region--sidebar-right-top {
-      -ms-grid-column: 4;
-      -ms-grid-column-span: 0;
-      -ms-grid-row: 3;
-      -ms-grid-row-span: 0;
-      grid-column: 4/4;
-      grid-row: 3/3; } }
-
-@media (min-width: 767px) {
+    .grid-layout {
+      -ms-grid-columns: 1fr auto minmax(0px, 650px) minmax(300px, 1fr) 1fr;
+          grid-template-columns: 1fr auto minmax(0px, 650px) minmax(300px, 1fr) 1fr;
+      grid-template-areas: "nav nav nav nav nav"  "... header header header ..."  "... auxiliary-sidebar main-content sidebar-right-top ..."  "... auxiliary-sidebar main-content sidebar-right-bottom ..."  "bottom-content bottom-content bottom-content bottom-content bottom-content"; } }
+  .grid-layout .region--nav {
+    grid-area: nav;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    -ms-grid-row: 6;
+    -ms-grid-row-span: 1;
+    grid-column: 1/2;
+    grid-row: 6/7;
+    background-color: lightcoral; }
+    @media (min-width: 767px) {
+      .grid-layout .region--nav {
+        -ms-grid-column: 1;
+        -ms-grid-column-span: 2;
+        -ms-grid-row: 1;
+        -ms-grid-row-span: 1;
+        grid-column: 1/3;
+        grid-row: 1/2; } }
+    @media (min-width: 1025px) {
+      .grid-layout .region--nav {
+        -ms-grid-column: 1;
+        -ms-grid-column-span: 6;
+        -ms-grid-row: 1;
+        -ms-grid-row-span: 1;
+        grid-column: 1/7;
+        grid-row: 1/2; } }
+  .grid-layout .region--header {
+    grid-area: header;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-column: 1/2;
+    grid-row: 1/2;
+    background-color: lightgreen; }
+    @media (min-width: 767px) {
+      .grid-layout .region--header {
+        -ms-grid-column: 1;
+        -ms-grid-column-span: 2;
+        -ms-grid-row: 2;
+        -ms-grid-row-span: 1;
+        grid-column: 1/3;
+        grid-row: 2/3; } }
+    @media (min-width: 1025px) {
+      .grid-layout .region--header {
+        -ms-grid-column: 2;
+        -ms-grid-column-span: 3;
+        -ms-grid-row: 2;
+        -ms-grid-row-span: 1;
+        grid-column: 2/5;
+        grid-row: 2/3; } }
+  .grid-layout .region--auxiliary-sidebar {
+    grid-area: auxiliary-sidebar;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-column: 1/2;
+    grid-row: 3/4;
+    background-color: lightgoldenrodyellow; }
+    @media (min-width: 767px) {
+      .grid-layout .region--auxiliary-sidebar {
+        -ms-grid-column: 2;
+        -ms-grid-column-span: 1;
+        -ms-grid-row: 3;
+        -ms-grid-row-span: 1;
+        grid-column: 2/3;
+        grid-row: 3/4; } }
+    @media (min-width: 1025px) {
+      .grid-layout .region--auxiliary-sidebar {
+        -ms-grid-column: 2;
+        -ms-grid-column-span: 1;
+        -ms-grid-row: 3;
+        -ms-grid-row-span: 1;
+        grid-column: 2/3;
+        grid-row: 3/4; } }
+  .grid-layout .region--sidebar-right-top {
+    grid-area: sidebar-right-top;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    -ms-grid-row: 4;
+    -ms-grid-row-span: 1;
+    grid-column: 1/2;
+    grid-row: 4/5;
+    background-color: lightcyan; }
+    @media (min-width: 767px) {
+      .grid-layout .region--sidebar-right-top {
+        -ms-grid-column: 2;
+        -ms-grid-column-span: 1;
+        -ms-grid-row: 4;
+        -ms-grid-row-span: 1;
+        grid-column: 2/3;
+        grid-row: 4/5; } }
+    @media (min-width: 1025px) {
+      .grid-layout .region--sidebar-right-top {
+        -ms-grid-column: 4;
+        -ms-grid-column-span: 1;
+        -ms-grid-row: 3;
+        -ms-grid-row-span: 1;
+        grid-column: 4/5;
+        grid-row: 3/4; } }
   .grid-layout .region--sidebar-right-bottom {
-    -ms-grid-column: 2;
+    grid-area: sidebar-right-bottom;
+    -ms-grid-column: 1;
     -ms-grid-column-span: 0;
     -ms-grid-row: 5;
     -ms-grid-row-span: 0;
-    grid-column: 2/2;
-    grid-row: 5/5; } }
-
-@media (min-width: 1025px) {
-  .grid-layout .region--sidebar-right-bottom {
-    -ms-grid-column: 4;
-    -ms-grid-column-span: 0;
-    -ms-grid-row: 4;
-    -ms-grid-row-span: 0;
-    grid-column: 4/4;
-    grid-row: 4/4; } }
-
-.grid-layout .region--main-content {
-  grid-area: main-content; }
-  @media (min-width: 767px) {
-    .grid-layout .region--main-content {
-      -ms-grid-column: 1;
-      -ms-grid-column-span: 0;
-      -ms-grid-row: 3;
-      -ms-grid-row-span: 3;
-      grid-column: 1/1;
-      grid-row: 3/6; } }
-  @media (min-width: 1025px) {
-    .grid-layout .region--main-content {
-      -ms-grid-column: 3;
-      -ms-grid-column-span: 0;
-      -ms-grid-row: 3;
-      -ms-grid-row-span: 2;
-      grid-column: 3/3;
-      grid-row: 3/5; } }
-
-.grid-layout .region--bottom-content {
-  grid-area: bottom-content; }
-  @media (min-width: 767px) {
-    .grid-layout .region--bottom-content {
-      -ms-grid-column: 1;
-      -ms-grid-column-span: 1;
-      -ms-grid-row: 6;
-      -ms-grid-row-span: 0;
-      grid-column: 1/2;
-      grid-row: 6/6; } }
-  @media (min-width: 1025px) {
-    .grid-layout .region--bottom-content {
-      -ms-grid-column: 1;
-      -ms-grid-column-span: 5;
-      -ms-grid-row: 5;
-      -ms-grid-row-span: 0;
-      grid-column: 1/6;
-      grid-row: 5/5; } }
+    grid-column: 1/1;
+    grid-row: 5/5;
+    background-color: lightgrey; }
+    @media (min-width: 767px) {
+      .grid-layout .region--sidebar-right-bottom {
+        -ms-grid-column: 2;
+        -ms-grid-column-span: 0;
+        -ms-grid-row: 5;
+        -ms-grid-row-span: 1;
+        grid-column: 2/2;
+        grid-row: 5/6; } }
+    @media (min-width: 1025px) {
+      .grid-layout .region--sidebar-right-bottom {
+        -ms-grid-column: 4;
+        -ms-grid-column-span: 0;
+        -ms-grid-row: 4;
+        -ms-grid-row-span: 1;
+        grid-column: 4/4;
+        grid-row: 4/5; } }
+  .grid-layout .region--main-content {
+    grid-area: main-content;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-column: 1/2;
+    grid-row: 2/3;
+    background-color: lightblue; }
+    @media (min-width: 767px) {
+      .grid-layout .region--main-content {
+        -ms-grid-column: 1;
+        -ms-grid-column-span: 1;
+        -ms-grid-row: 3;
+        -ms-grid-row-span: 3;
+        grid-column: 1/2;
+        grid-row: 3/6; } }
+    @media (min-width: 1025px) {
+      .grid-layout .region--main-content {
+        -ms-grid-column: 3;
+        -ms-grid-column-span: 1;
+        -ms-grid-row: 3;
+        -ms-grid-row-span: 2;
+        grid-column: 3/4;
+        grid-row: 3/5; } }
+  .grid-layout .region--bottom-content {
+    grid-area: bottom-content;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    -ms-grid-row: 6;
+    -ms-grid-row-span: 1;
+    grid-column: 1/2;
+    grid-row: 6/7;
+    background-color: lightseagreen; }
+    @media (min-width: 767px) {
+      .grid-layout .region--bottom-content {
+        -ms-grid-column: 1;
+        -ms-grid-column-span: 2;
+        -ms-grid-row: 6;
+        -ms-grid-row-span: 1;
+        grid-column: 1/3;
+        grid-row: 6/7; } }
+    @media (min-width: 1025px) {
+      .grid-layout .region--bottom-content {
+        -ms-grid-column: 1;
+        -ms-grid-column-span: 6;
+        -ms-grid-row: 5;
+        -ms-grid-row-span: 1;
+        grid-column: 1/7;
+        grid-row: 5/6; } }
 
 /*
 @styleguide
