--- a/html/themes/custom/elsa/components/01-base/regions/_regions.scss
+++ b/html/themes/custom/elsa/components/01-base/regions/_regions.scss
@@ -9,15 +9,8 @@ Use regions to place our blocks. The regions will use a gridCSS formula to deal 
 */
 
 main {
-  // we are not using grid at mobile since there are no complicated regions to be defined
   display: grid;
-  display: -ms-grid;
-
-  // @include breakpoint (tablet) {
-  //   display: grid;
-  //   display: -ms-grid;
-  // }
-  
+  display: -ms-grid; 
 }
 
 //fallbacks for IE mixin
@@ -37,35 +30,31 @@ main {
 
 // define our named region tablet/desktop grid layout
 .grid-layout {
-  align-items: start;
   grid-template-columns: 1fr;   
   grid-template-areas:    
   "header" 
   "main-content"
   "auxiliary-sidebar"
-  "sidebar-right-top"    
-  "sidebar-right-bottom" 
+  "sidebar-right-top"
   "bottom-content"
   "nav";
 
   @include breakpoint (tablet) {
-    grid-template-columns: minmax(0px, 650px) minmax(300px, 1fr);   
+    grid-template-columns: minmax(450px, 650px) minmax(250px, 1fr);   
     grid-template-areas:   
     "nav nav" 
     "header header" 
     "main-content auxiliary-sidebar"
     "main-content sidebar-right-top"     
-    "main-content sidebar-right-bottom" 
     "bottom-content bottom-content";
   }
 
   @include breakpoint (desktop) {
-    grid-template-columns: 1fr auto minmax(0px, 650px) minmax(300px, 1fr) 1fr;   
+    grid-template-columns: 1fr auto minmax(450px, 650px) minmax(250px, 1fr) 1fr;   
     grid-template-areas:   
     "nav nav nav nav nav" 
     "... header header header ..." 
     "... auxiliary-sidebar main-content sidebar-right-top ..." 
-    "... auxiliary-sidebar main-content sidebar-right-bottom ..." 
     "bottom-content bottom-content bottom-content bottom-content bottom-content";
   }
 
@@ -85,7 +74,7 @@ main {
         @include breakpoint (desktop) {
           @include grid-child (1, 7, 1, 2);
         }
-        background-color: lightcoral;
+        // background-color: lightcoral;
       }
       // ($col-start, $col-end, $row-start, $row-end)         
       &--header {
@@ -101,7 +90,7 @@ main {
           @include grid-child (2, 5, 2, 3);
         }
 
-        background-color: lightgreen;
+        // background-color: lightgreen;
       }
       // ($col-start, $col-end, $row-start, $row-end)     
       &--auxiliary-sidebar {
@@ -117,7 +106,7 @@ main {
           @include grid-child (2, 3, 3, 4);
         }
         
-        background-color: lightgoldenrodyellow;  
+        // background-color: lightgoldenrodyellow;
       }
       // ($col-start, $col-end, $row-start, $row-end)      
       &--sidebar-right-top {
@@ -133,23 +122,7 @@ main {
           @include grid-child (4, 5, 3, 4);
         }
 
-        background-color: lightcyan; 
-      }
-      // ($col-start, $col-end, $row-start, $row-end) 
-      &--sidebar-right-bottom {
-        grid-area: sidebar-right-bottom;
-        //fallbacks for IE
-        @include grid-child (1, 1, 5, 5);
-
-        @include breakpoint (tablet) {
-          @include grid-child (2, 2, 5, 6);
-        }
-
-        @include breakpoint (desktop) {
-          @include grid-child (4, 4, 4, 5);
-        }
-
-        background-color: lightgrey;    
+        // background-color: lightcyan; 
       }
       // ($col-start, $col-end, $row-start, $row-end) 
       &--main-content {
@@ -165,13 +138,13 @@ main {
           @include grid-child (3, 4, 3, 5);
         }
 
-        background-color: lightblue; 
+        // background-color: lightblue; 
       }
       // ($col-start, $col-end, $row-start, $row-end)      
       &--bottom-content {
         grid-area: bottom-content;
         //fallbacks for IE
-        @include grid-child (1, 2, 6, 7);
+        @include grid-child (1, 2, 5, 6);
 
         @include breakpoint (tablet) {
           @include grid-child (1, 3, 6, 7);
@@ -181,7 +154,7 @@ main {
           @include grid-child (1, 7, 5, 6);
         }
 
-        background-color: lightseagreen;    
+        // background-color: lightseagreen;    
       }
     
     }
