--- a/html/themes/custom/partners_colab/components/01-base/regions/_regions.scss
+++ b/html/themes/custom/partners_colab/components/01-base/regions/_regions.scss
@@ -23,6 +23,13 @@ main {
   grid-row: #{$row-start}/#{$row-end};
 }
 
+@mixin overrideDefaultLayout {
+  // over-rides the sub-theme
+  max-width: none;
+  margin: 0;
+  position: static; 
+}
+
 //main-container class is left over from the base theme, you can overwrite here
 .main-container {
   padding: 0;
@@ -32,129 +39,204 @@ main {
 .grid-layout {
   grid-template-columns: 1fr;   
   grid-template-areas:    
-  "header" 
-  "main-content"
-  "auxiliary-sidebar"
-  "sidebar-right-top"
-  "bottom-content"
-  "nav";
+  "hero"
+  "secondary-nav"
+  "breadcrumb"
+  "content-top"
+  "content"
+  "content-bottom"  
+  "sidebar-first"
+  "sidebar-second"
+  "footer";
 
   @include breakpoint (tablet) {
     grid-template-columns: minmax(450px, 650px) minmax(250px, 1fr);   
     grid-template-areas:   
-    "nav nav" 
-    "header header" 
-    "main-content auxiliary-sidebar"
-    "main-content sidebar-right-top"     
-    "bottom-content bottom-content";
+    "hero hero"
+    "secondary-nav secondary-nav"      
+    "breadcrumb sidebar-first"
+    "content-top sidebar-first"
+    "content sidebar-second"     
+    "content-bottom sidebar-second"     
+    "footer footer";
   }
 
   @include breakpoint (desktop) {
     grid-template-columns: 1fr auto minmax(450px, 650px) minmax(250px, 1fr) 1fr;   
     grid-template-areas:   
-    "nav nav nav nav nav" 
-    "... header header header ..." 
-    "... auxiliary-sidebar main-content sidebar-right-top ..." 
-    "bottom-content bottom-content bottom-content bottom-content bottom-content";
+    "hero hero hero hero hero"
+    "secondary-nav secondary-nav secondary-nav secondary-nav secondary-nav" 
+    "... sidebar-first breadcrumb sidebar-second ..."
+    "... sidebar-first content-top sidebar-second ..."
+    "... sidebar-first content sidebar-second ..."
+    "... content-bottom content-bottom sidebar-second ..."    
+    "footer footer footer footer footer"
   }
 
   // define our grid area namesystem
   // colours toggled for troubleshooting
   .region {
+
       // ($col-start, $col-end, $row-start, $row-end)
-      &--nav {
-        grid-area: nav;
+      &--hero {
+        @include overrideDefaultLayout;
+        grid-area: hero;
         //fallbacks for IE
-        @include grid-child (1, 2, 6, 7);
+        // @include grid-child (1, 2, 1, 2);
 
-        @include breakpoint (tablet) {
-          @include grid-child (1, 3, 1, 2);
-        }
+        // @include breakpoint (tablet) {
+        //   @include grid-child (1, 3, 2, 3);
+        // }
 
-        @include breakpoint (desktop) {
-          @include grid-child (1, 7, 1, 2);
-        }
-        // background-color: lightcoral;
+        // @include breakpoint (desktop) {
+        //   @include grid-child (2, 5, 2, 3);
+        // }
+
+        background-color: orange;
       }
-      // ($col-start, $col-end, $row-start, $row-end)         
-      &--header {
-        grid-area: header;
+
+      // ($col-start, $col-end, $row-start, $row-end)
+      &--secondary-navigation {
+        @include overrideDefaultLayout;
+        grid-area: secondary-nav;
         //fallbacks for IE
-        @include grid-child (1, 2, 1, 2)
+        // @include grid-child (1, 2, 1, 2);
 
-        @include breakpoint (tablet) {
-          @include grid-child (1, 3, 2, 3);
-        }
+        // @include breakpoint (tablet) {
+        //   @include grid-child (1, 3, 2, 3);
+        // }
 
-        @include breakpoint (desktop) {
-          @include grid-child (2, 5, 2, 3);
-        }
+        // @include breakpoint (desktop) {
+        //   @include grid-child (2, 5, 2, 3);
+        // }
 
-        // background-color: lightgreen;
+        background-color: pink;
       }
+
       // ($col-start, $col-end, $row-start, $row-end)     
-      &--auxiliary-sidebar {
-        grid-area: auxiliary-sidebar;
+      &--sidebar-first {
+        @include overrideDefaultLayout;
+        grid-area: sidebar-first;
         //fallbacks for IE
-        @include grid-child (1, 2, 3, 4);
+        // @include grid-child (1, 2, 3, 4);
 
-        @include breakpoint (tablet) {
-          @include grid-child (2, 3, 3, 4);
-        }
+        // @include breakpoint (tablet) {
+        //   @include grid-child (2, 3, 3, 4);
+        // }
 
-        @include breakpoint (desktop) {
-          @include grid-child (2, 3, 3, 4);
-        }
+        // @include breakpoint (desktop) {
+        //   @include grid-child (2, 3, 3, 4);
+        // }
         
-        // background-color: lightgoldenrodyellow;
+        background-color: lightgoldenrodyellow;
       }
+
       // ($col-start, $col-end, $row-start, $row-end)      
-      &--sidebar-right-top {
-        grid-area: sidebar-right-top;
+      &--sidebar-second {
+        @include overrideDefaultLayout;
+        grid-area: sidebar-second;
         //fallbacks for IE
-        @include grid-child (1, 2, 4, 5);
+        // @include grid-child (1, 2, 4, 5);
 
-        @include breakpoint (tablet) {
-          @include grid-child (2, 3, 4, 5);
-        }
+        // @include breakpoint (tablet) {
+        //   @include grid-child (2, 3, 4, 5);
+        // }
 
-        @include breakpoint (desktop) {
-          @include grid-child (4, 5, 3, 4);
-        }
+        // @include breakpoint (desktop) {
+        //   @include grid-child (4, 5, 3, 4);
+        // }
 
-        // background-color: lightcyan; 
+        background-color: lightcyan; 
       }
+
       // ($col-start, $col-end, $row-start, $row-end) 
-      &--main-content {
-        grid-area: main-content;
+      &--breadcrumb {
+        @include overrideDefaultLayout;
+        grid-area: breadcrumb;
         //fallbacks for IE
-        @include grid-child (1, 2, 2, 3);
+        // @include grid-child (1, 2, 2, 3);
 
-        @include breakpoint (tablet) {
-          @include grid-child (1, 2, 3, 6);
-        }
+        // @include breakpoint (tablet) {
+        //   @include grid-child (1, 2, 3, 6);
+        // }
 
-        @include breakpoint (desktop) {
-          @include grid-child (3, 4, 3, 5);
-        }
+        // @include breakpoint (desktop) {
+        //   @include grid-child (3, 4, 3, 5);
+        // }
 
-        // background-color: lightblue; 
+        background-color: lightgreen;
       }
-      // ($col-start, $col-end, $row-start, $row-end)      
-      &--bottom-content {
-        grid-area: bottom-content;
+
+      // ($col-start, $col-end, $row-start, $row-end) 
+      &--content-top {
+        @include overrideDefaultLayout;
+        grid-area: content-top;
         //fallbacks for IE
-        @include grid-child (1, 2, 5, 6);
+        // @include grid-child (1, 2, 2, 3);
 
-        @include breakpoint (tablet) {
-          @include grid-child (1, 3, 6, 7);
-        }
+        // @include breakpoint (tablet) {
+        //   @include grid-child (1, 2, 3, 6);
+        // }
 
-        @include breakpoint (desktop) {
-          @include grid-child (1, 7, 5, 6);
-        }
+        // @include breakpoint (desktop) {
+        //   @include grid-child (3, 4, 3, 5);
+        // }
 
-        // background-color: lightseagreen;    
+        background-color: lightblue; 
+      }
+
+      // ($col-start, $col-end, $row-start, $row-end) 
+      &--content {
+        @include overrideDefaultLayout;
+        grid-area: content;
+        //fallbacks for IE
+        // @include grid-child (1, 2, 2, 3);
+
+        // @include breakpoint (tablet) {
+        //   @include grid-child (1, 2, 3, 6);
+        // }
+
+        // @include breakpoint (desktop) {
+        //   @include grid-child (3, 4, 3, 5);
+        // }
+
+        background-color: lightblue; 
+      }
+
+      // ($col-start, $col-end, $row-start, $row-end)      
+      &--content-bottom {
+        @include overrideDefaultLayout;
+        grid-area: content-bottom;
+        // //fallbacks for IE
+        // @include grid-child (1, 2, 5, 6);
+
+        // @include breakpoint (tablet) {
+        //   @include grid-child (1, 3, 6, 7);
+        // }
+
+        // @include breakpoint (desktop) {
+        //   @include grid-child (1, 7, 5, 6);
+        // }
+
+        background-color: lightseagreen;    
+      }
+
+      // ($col-start, $col-end, $row-start, $row-end)    
+      &--footer {
+        @include overrideDefaultLayout;
+        grid-area: footer;
+        //fallbacks for IE
+        // @include grid-child (1, 2, 5, 6);
+
+        // @include breakpoint (tablet) {
+        //   @include grid-child (1, 3, 6, 7);
+        // }
+
+        // @include breakpoint (desktop) {
+        //   @include grid-child (1, 7, 5, 6);
+        // }
+
+        background-color: purple;    
       }
     
     }
