--- a/html/themes/custom/partners_colab/css/partners-colab.css
+++ b/html/themes/custom/partners_colab/css/partners-colab.css
@@ -370,161 +370,71 @@ main {
 .grid-layout {
   -ms-grid-columns: 1fr;
       grid-template-columns: 1fr;
-  grid-template-areas: "header"  "main-content" "auxiliary-sidebar" "sidebar-right-top" "bottom-content" "nav"; }
+  grid-template-areas: "hero" "secondary-nav" "breadcrumb" "content-top" "content" "content-bottom"   "sidebar-first" "sidebar-second" "footer"; }
   @media (min-width: 767px) {
     .grid-layout {
       -ms-grid-columns: minmax(450px, 650px) minmax(250px, 1fr);
           grid-template-columns: minmax(450px, 650px) minmax(250px, 1fr);
-      grid-template-areas: "nav nav"  "header header"  "main-content auxiliary-sidebar" "main-content sidebar-right-top"      "bottom-content bottom-content"; } }
+      grid-template-areas: "hero hero" "secondary-nav secondary-nav"       "breadcrumb sidebar-first" "content-top sidebar-first" "content sidebar-second"      "content-bottom sidebar-second"      "footer footer"; } }
   @media (min-width: 1025px) {
     .grid-layout {
       -ms-grid-columns: 1fr auto minmax(450px, 650px) minmax(250px, 1fr) 1fr;
           grid-template-columns: 1fr auto minmax(450px, 650px) minmax(250px, 1fr) 1fr;
-      grid-template-areas: "nav nav nav nav nav"  "... header header header ..."  "... auxiliary-sidebar main-content sidebar-right-top ..."  "bottom-content bottom-content bottom-content bottom-content bottom-content"; } }
-  .grid-layout .region--nav {
-    grid-area: nav;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    -ms-grid-row: 6;
-    -ms-grid-row-span: 1;
-    grid-column: 1/2;
-    grid-row: 6/7; }
-    @media (min-width: 767px) {
-      .grid-layout .region--nav {
-        -ms-grid-column: 1;
-        -ms-grid-column-span: 2;
-        -ms-grid-row: 1;
-        -ms-grid-row-span: 1;
-        grid-column: 1/3;
-        grid-row: 1/2; } }
-    @media (min-width: 1025px) {
-      .grid-layout .region--nav {
-        -ms-grid-column: 1;
-        -ms-grid-column-span: 6;
-        -ms-grid-row: 1;
-        -ms-grid-row-span: 1;
-        grid-column: 1/7;
-        grid-row: 1/2; } }
-  .grid-layout .region--header {
-    grid-area: header;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 1;
-    grid-column: 1/2;
-    grid-row: 1/2; }
-    @media (min-width: 767px) {
-      .grid-layout .region--header {
-        -ms-grid-column: 1;
-        -ms-grid-column-span: 2;
-        -ms-grid-row: 2;
-        -ms-grid-row-span: 1;
-        grid-column: 1/3;
-        grid-row: 2/3; } }
-    @media (min-width: 1025px) {
-      .grid-layout .region--header {
-        -ms-grid-column: 2;
-        -ms-grid-column-span: 3;
-        -ms-grid-row: 2;
-        -ms-grid-row-span: 1;
-        grid-column: 2/5;
-        grid-row: 2/3; } }
-  .grid-layout .region--auxiliary-sidebar {
-    grid-area: auxiliary-sidebar;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    -ms-grid-row: 3;
-    -ms-grid-row-span: 1;
-    grid-column: 1/2;
-    grid-row: 3/4; }
-    @media (min-width: 767px) {
-      .grid-layout .region--auxiliary-sidebar {
-        -ms-grid-column: 2;
-        -ms-grid-column-span: 1;
-        -ms-grid-row: 3;
-        -ms-grid-row-span: 1;
-        grid-column: 2/3;
-        grid-row: 3/4; } }
-    @media (min-width: 1025px) {
-      .grid-layout .region--auxiliary-sidebar {
-        -ms-grid-column: 2;
-        -ms-grid-column-span: 1;
-        -ms-grid-row: 3;
-        -ms-grid-row-span: 1;
-        grid-column: 2/3;
-        grid-row: 3/4; } }
-  .grid-layout .region--sidebar-right-top {
-    grid-area: sidebar-right-top;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    -ms-grid-row: 4;
-    -ms-grid-row-span: 1;
-    grid-column: 1/2;
-    grid-row: 4/5; }
-    @media (min-width: 767px) {
-      .grid-layout .region--sidebar-right-top {
-        -ms-grid-column: 2;
-        -ms-grid-column-span: 1;
-        -ms-grid-row: 4;
-        -ms-grid-row-span: 1;
-        grid-column: 2/3;
-        grid-row: 4/5; } }
-    @media (min-width: 1025px) {
-      .grid-layout .region--sidebar-right-top {
-        -ms-grid-column: 4;
-        -ms-grid-column-span: 1;
-        -ms-grid-row: 3;
-        -ms-grid-row-span: 1;
-        grid-column: 4/5;
-        grid-row: 3/4; } }
-  .grid-layout .region--main-content {
-    grid-area: main-content;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    -ms-grid-row: 2;
-    -ms-grid-row-span: 1;
-    grid-column: 1/2;
-    grid-row: 2/3; }
-    @media (min-width: 767px) {
-      .grid-layout .region--main-content {
-        -ms-grid-column: 1;
-        -ms-grid-column-span: 1;
-        -ms-grid-row: 3;
-        -ms-grid-row-span: 3;
-        grid-column: 1/2;
-        grid-row: 3/6; } }
-    @media (min-width: 1025px) {
-      .grid-layout .region--main-content {
-        -ms-grid-column: 3;
-        -ms-grid-column-span: 1;
-        -ms-grid-row: 3;
-        -ms-grid-row-span: 2;
-        grid-column: 3/4;
-        grid-row: 3/5; } }
-  .grid-layout .region--bottom-content {
-    grid-area: bottom-content;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    -ms-grid-row: 5;
-    -ms-grid-row-span: 1;
-    grid-column: 1/2;
-    grid-row: 5/6; }
-    @media (min-width: 767px) {
-      .grid-layout .region--bottom-content {
-        -ms-grid-column: 1;
-        -ms-grid-column-span: 2;
-        -ms-grid-row: 6;
-        -ms-grid-row-span: 1;
-        grid-column: 1/3;
-        grid-row: 6/7; } }
-    @media (min-width: 1025px) {
-      .grid-layout .region--bottom-content {
-        -ms-grid-column: 1;
-        -ms-grid-column-span: 6;
-        -ms-grid-row: 5;
-        -ms-grid-row-span: 1;
-        grid-column: 1/7;
-        grid-row: 5/6; } }
+      grid-template-areas: "hero hero hero hero hero" "secondary-nav secondary-nav secondary-nav secondary-nav secondary-nav"  "... sidebar-first breadcrumb sidebar-second ..." "... sidebar-first content-top sidebar-second ..." "... sidebar-first content sidebar-second ..." "... content-bottom content-bottom sidebar-second ..."     "footer footer footer footer footer"; } }
+  .grid-layout .region--hero {
+    max-width: none;
+    margin: 0;
+    position: static;
+    grid-area: hero;
+    background-color: orange; }
+  .grid-layout .region--secondary-navigation {
+    max-width: none;
+    margin: 0;
+    position: static;
+    grid-area: secondary-nav;
+    background-color: pink; }
+  .grid-layout .region--sidebar-first {
+    max-width: none;
+    margin: 0;
+    position: static;
+    grid-area: sidebar-first;
+    background-color: lightgoldenrodyellow; }
+  .grid-layout .region--sidebar-second {
+    max-width: none;
+    margin: 0;
+    position: static;
+    grid-area: sidebar-second;
+    background-color: lightcyan; }
+  .grid-layout .region--breadcrumb {
+    max-width: none;
+    margin: 0;
+    position: static;
+    grid-area: breadcrumb;
+    background-color: lightgreen; }
+  .grid-layout .region--content-top {
+    max-width: none;
+    margin: 0;
+    position: static;
+    grid-area: content-top;
+    background-color: lightblue; }
+  .grid-layout .region--content {
+    max-width: none;
+    margin: 0;
+    position: static;
+    grid-area: content;
+    background-color: lightblue; }
+  .grid-layout .region--content-bottom {
+    max-width: none;
+    margin: 0;
+    position: static;
+    grid-area: content-bottom;
+    background-color: lightseagreen; }
+  .grid-layout .region--footer {
+    max-width: none;
+    margin: 0;
+    position: static;
+    grid-area: footer;
+    background-color: purple; }
 
 /*
 @styleguide
